test/compile_error/baditemname.conf.def
config bad_item_conf
{
	123item : int;
}
